feat(api): add project metadata for current UI
